Making a maven plugin project

--- a/mdd-maven-plugin/pom.xml
+++ b/mdd-maven-plugin/pom.xml
@@ -7,11 +7,32 @@
     <relativePath>..</relativePath>
   </parent>
   
-  <artifactId>com.github.jasonrose.crud.om</artifactId>
+  <artifactId>mdd-maven-plugin</artifactId>
+  <packaging>maven-plugin</packaging>
 
-  <name>Proof of Concept - MDD Application - Model</name>
+  <name>Proof of Concept - MDD Application - Maven Plugin</name>
+  
+  <properties>
+    <maven.version>2.2.1</maven.version>
+  </properties>
+  
+  <prerequisites>
+    <maven>2.2.1</maven>
+  </prerequisites>
 
   <dependencies>
+  
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-plugin-api</artifactId>
+      <version>${maven.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-project</artifactId>
+      <version>${maven.version}</version>
+    </dependency>
+    
     <dependency>
       <groupId>com.github.praxissoftware.rest</groupId>
       <artifactId>com.github.praxissoftware.rest.core</artifactId>
@@ -44,11 +65,6 @@
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-jpa_2.0_spec</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
     </dependency>
 
     <dependency>
