--- a/mdd-maven-plugin/pom.xml
+++ b/mdd-maven-plugin/pom.xml
@@ -6,22 +6,22 @@
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
-  
+
   <artifactId>mdd-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
 
   <name>Proof of Concept - MDD Application - Maven Plugin</name>
-  
+
   <properties>
     <maven.version>2.2.1</maven.version>
   </properties>
-  
+
   <prerequisites>
     <maven>2.2.1</maven>
   </prerequisites>
 
   <dependencies>
-  
+
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
@@ -32,27 +32,31 @@
       <artifactId>maven-project</artifactId>
       <version>${maven.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>${project.groupId}.crud.om</artifactId>
       <version>${project.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.reflections</groupId>
       <artifactId>reflections</artifactId>
       <version>0.9.5</version>
     </dependency>
-    
+
     <dependency>
       <groupId>com.github.praxissoftware.rest</groupId>
       <artifactId>com.github.praxissoftware.rest.core</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>com.googlecode.guava-osgi</groupId>
       <artifactId>guava-osgi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
     </dependency>
 
     <dependency>
