--- a/example/services/pom.xml
+++ b/example/services/pom.xml
@@ -21,13 +21,13 @@
       <artifactId>logback-classic</artifactId>
       <scope>compile</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.4</version>
     </dependency>
-    
+
     <dependency>
       <groupId>com.github.praxissoftware.rest</groupId>
       <artifactId>com.github.praxissoftware.rest.core</artifactId>
@@ -69,6 +69,10 @@
       <artifactId>jersey-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-json</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.sun.jersey.contribs</groupId>
       <artifactId>jersey-guice</artifactId>
     </dependency>
@@ -86,6 +90,10 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
     </dependency>
   </dependencies>
 
