Updating poms since I haven't touched this code. Going to have to figure out why reflections 0.9.8 doesn't work.

--- a/mdd-maven-plugin/pom.xml
+++ b/mdd-maven-plugin/pom.xml
@@ -33,6 +33,12 @@
       <artifactId>${project.groupId}.crud.om</artifactId>
       <version>${project.version}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <scope>compile</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.reflections</groupId>
