--- a/pom.xml
+++ b/pom.xml
@@ -14,20 +14,25 @@
     <module>mdd-maven-plugin</module>
     <module>example</module>
   </modules>
+  
+  <properties>
+    <praxis.version>1.4.0-SNAPSHOT</praxis.version>
+    <praxis-rest.version>2.0.1</praxis-rest.version>
+  </properties>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>com.github.praxissoftware.poms</groupId>
         <artifactId>com.github.praxissoftware.poms.commons</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>${praxis.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>com.github.praxissoftware.poms</groupId>
         <artifactId>com.github.praxissoftware.poms.rest</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>${praxis.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -35,7 +40,15 @@
       <dependency>
         <groupId>com.github.praxissoftware.poms</groupId>
         <artifactId>com.github.praxissoftware.poms.testing</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>${praxis.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      
+      <dependency>
+        <groupId>com.github.praxissoftware.poms</groupId>
+        <artifactId>com.github.praxissoftware.poms.logging</artifactId>
+        <version>${praxis.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -43,7 +56,7 @@
       <dependency>
         <groupId>com.github.praxissoftware.rest</groupId>
         <artifactId>com.github.praxissoftware.rest.core</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${praxis-rest.version}</version>
       </dependency>
 
       <dependency>
@@ -60,22 +73,22 @@
       <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
-        <version>1.3.166</version>
+        <version>1.3.167</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
-        <version>4.1.2</version>
+        <version>4.1.4.Final</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
-        <version>4.1.2</version>
+        <version>4.1.4.Final</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-validator</artifactId>
-        <version>4.2.0.Final</version>
+        <version>4.3.0.Final</version>
       </dependency>
 
       <!-- Specs -->
@@ -99,16 +112,11 @@
         <artifactId>servlet-api</artifactId>
         <version>2.5</version>
       </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.6.4</version>
-      </dependency>
 
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
-        <version>4.1.3</version>
+        <version>4.1.2</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
