--- a/mdd-maven-plugin/pom.xml
+++ b/mdd-maven-plugin/pom.xml
@@ -46,8 +46,8 @@
     </dependency>
 
     <dependency>
-      <groupId>com.googlecode.guava-osgi</groupId>
-      <artifactId>guava-osgi</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
 
     <dependency>
@@ -57,7 +57,7 @@
 
     <dependency>
       <groupId>com.github.spullara.mustache.java</groupId>
-      <artifactId>builder</artifactId>
+      <artifactId>compiler</artifactId>
     </dependency>
 
     <dependency>
