--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
   </modules>
   
   <properties>
-    <praxis.version>1.4.0-SNAPSHOT</praxis.version>
-    <praxis-rest.version>2.0.1</praxis-rest.version>
+    <praxis.version>2.0.0-SNAPSHOT</praxis.version>
+    <praxis-rest.version>2.0.2</praxis-rest.version>
   </properties>
 
   <dependencyManagement>
@@ -62,34 +62,34 @@
 
       <dependency>
         <groupId>com.github.spullara.mustache.java</groupId>
-        <artifactId>builder</artifactId>
-        <version>0.6.3</version>
+        <artifactId>compiler</artifactId>
+        <version>0.8.10</version>
       </dependency>
       <dependency>
         <groupId>org.reflections</groupId>
         <artifactId>reflections</artifactId>
-        <version>0.9.6</version>
+        <version>0.9.8</version>
       </dependency>
 
       <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
-        <version>1.3.167</version>
+        <version>1.3.170</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
-        <version>4.1.4.Final</version>
+        <version>4.1.10.Final</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
-        <version>4.1.4.Final</version>
+        <version>4.1.10.Final</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-validator</artifactId>
-        <version>4.3.0.Final</version>
+        <version>4.3.1.Final</version>
       </dependency>
 
       <!-- Specs -->
@@ -117,7 +117,7 @@
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
-        <version>4.1.2</version>
+        <version>4.2.3</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
